--- a/SSISExecutionManagerReports/ETL Package Execution Status.rdl
+++ b/SSISExecutionManagerReports/ETL Package Execution Status.rdl
@@ -34,10 +34,14 @@
        p.[EntryPointPackageInd],
        p.[ReadyForExecutionInd],
        b.[ETLBatchStatus]
-FROM   [rpt].[ETLPackageExecutionStatuses] p
-JOIN [rpt].[ETLBatchExecutions] b ON p.[ETLBatchExecutionId] = b.[ETLBatchExecutionId]
-WHERE p.[ETLBatchExecutionId] = @ETLBatchExecutionId
-ORDER  BY Isnull([ExecutionStartDateTime], '9999-12-31') , [SSISDBProjectName]</CommandText>
+FROM   
+  [rpt].[ETLPackageExecutionStatuses] p
+JOIN 
+  [rpt].[ETLBatchExecutions] b ON p.[ETLBatchExecutionId] = b.[ETLBatchExecutionId]
+WHERE 
+  p.[ETLBatchExecutionId] = @ETLBatchExecutionId
+ORDER  BY 
+  ISNULL([ExecutionStartDateTime], '9999-12-31') , [SSISDBProjectName]</CommandText>
         <rd:UseGenericDesigner>true</rd:UseGenericDesigner>
       </Query>
       <Fields>
@@ -1230,7 +1234,6 @@ Fields!PackageExecutionStatus.Value = "Canceled", "Salmon"
                                                                 <PaddingBottom>2pt</PaddingBottom>
                                                               </Style>
                                                             </Textbox>
-                                                            <rd:Selected>true</rd:Selected>
                                                           </CellContents>
                                                         </TablixCell>
                                                       </TablixCells>
