Fix to batch execution history dataset in ETL Batch Execution Dashboard report.

--- a/SSISExecutionManagerReports/ETL Batch Execution Dashboard.rdl
+++ b/SSISExecutionManagerReports/ETL Batch Execution Dashboard.rdl
@@ -265,8 +265,8 @@ WHERE
 FROM   
 	[rpt].[ETLBatchExecutions] be
 WHERE
-  ETLBatchExecutionId = (SELECT
-                    ETLBatchExecutionId
+  ETLBatchId = (SELECT
+                    ETLBatchId
                   FROM   [rpt].ETLBatchExecutions
 	  WHERE ETLBatchExecutionId = @ETLBatchExecutionId  )
   AND [StartDateTime] &gt;= DATEADD(DAY,-60, GETDATE())
